; ModuleID = '/home/carl/AnghaBench/reactos/base/applications/cmdutils/doskey/extr_doskey.c_RemoveQuotes.c'
source_filename = "/home/carl/AnghaBench/reactos/base/applications/cmdutils/doskey/extr_doskey.c_RemoveQuotes.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32*)* @RemoveQuotes to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @RemoveQuotes(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %4 = load i32*, i32** %2, align 8
  %5 = load i32, i32* %4, align 4
  %6 = icmp eq i32 %5, 34
  br i1 %6, label %7, label %20

7:                                                ; preds = %1
  %8 = load i32*, i32** %2, align 8
  %9 = load i32*, i32** %2, align 8
  %10 = call i32 @wcslen(i32* %9)
  %11 = sext i32 %10 to i64
  %12 = getelementptr inbounds i32, i32* %8, i64 %11
  %13 = getelementptr inbounds i32, i32* %12, i64 -1
  store i32* %13, i32** %3, align 8
  %14 = load i32, i32* %13, align 4
  %15 = icmp eq i32 %14, 34
  br i1 %15, label %16, label %20

16:                                               ; preds = %7
  %17 = load i32*, i32** %2, align 8
  %18 = getelementptr inbounds i32, i32* %17, i32 1
  store i32* %18, i32** %2, align 8
  %19 = load i32*, i32** %3, align 8
  store i32 0, i32* %19, align 4
  br label %20

20:                                               ; preds = %16, %7, %1
  %21 = load i32*, i32** %2, align 8
  ret i32* %21
}

declare dso_local i32 @wcslen(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
